--- a/app/src/androidMain/res/xml/my_app_widget_info.xml
+++ b/app/src/androidMain/res/xml/my_app_widget_info.xml
@@ -7,5 +7,6 @@
 
     android:minResizeHeight="@dimen/widget_min_resize_height"
     android:minResizeWidth="@dimen/widget_min_resize_width"
-    android:initialLayout="@layout/glance_default_loading_layout">
+    android:initialLayout="@layout/glance_default_loading_layout"
+    android:configure="de.dbauer.expensetracker.widget.ConfigureWidgetActivity">
 </appwidget-provider>
